--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth0/nextjs-auth0": "^3.5.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.331.0",
